--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,10 @@
 			<artifactId>jblas</artifactId>
 			<version>1.2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 	</dependencies>
 </project>
